src/test/deca/etapeC/valid/minus.deca
// Description:
//   Test de la bonne utilisation du moins
//
// Resultats:
// ima_output: 4
//

{
    int a = 8;
    a = a - 4;
    println(a);
}
